<resources>
    <string name="app_name">Medication Recognition</string>

    <string-array name="Dictionary">

        <item>Age</item>
        <item>Gender</item>
        <item>D.O.B</item>
        <item>Rx</item>
        <item>Medication</item>
        <item>Dosage</item>
        <item>Phone</item>
        <item>Address</item>
        <item>Quantity</item>
        <item>Exp</item>
        <item>Expiration</item>
        <item>Expiration Date</item>
        <item>Date Of Birth</item>
        <item>Sex</item>
        <item>Refills</item>
        <item>Refill</item>
        <item>Rx Date</item>
        <item>Date</item>
    </string-array>


    <!-- Array used when finding the name in the prescription -->

    <string-array name="dateArray">
        <item>date Of birth</item>
        <item>d.o.b</item>
        <item>birth date</item>
    </string-array>

    <string name="user_guied1">Please Take A Photo Of Your Prescription</string>
    <string name="name">Patient Name :</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="birthDate">BirthDate :</string>
    <string name="phone">Phone :</string>
    <string name="rx">Rx :</string>
    <string name="sendRequest">Send Request To Pharmacy :</string>
    <string name="results">Results :</string>
    <string name="pharmacistguied1">All Transactions</string>
    <string name="pharmacistguied2">Transaction Details</string>
    <string name="pharmacistguied3">Inventory</string>
    <string name="pharamcistguied4">Look Up For Alternatives ?</string>
    <string name="pharmacisttguied5">Alternatives Found</string>
    <string name="pharmacistguied6">Approve Transaction</string>
    <string name="adminguied1">Active Ingredient :</string>
    <string name="adminguied2">Dosage :</string>
    <string name="adminguied3">Inventory :</string>
    <string name="adminguied4">Frequency :</string>
    <string name="adminguied5">Delete</string>
    <string name="adminguied6">Edit</string>
    <string name="adminguied7">Add New Drug</string>
    <string name="adminguied8">Name</string>
    <string name="adminguied9">Active Ingredient</string>
    <string name="adminguied10">Dosage</string>
    <string name="adminguied11">Inventory</string>
    <string name="adminguied12">Add</string>
</resources>
