<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E88E5"
    tools:context="com.project.year2.medicationrecognition.TransactionDetails">

    <TextView
        android:id="@+id/detailsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pharmacistguied2"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000"/>

    <LinearLayout
        android:id="@+id/p_detailsLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffff"
        android:layout_below="@id/detailsTextView">

        <TextView
            android:id="@+id/d_nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#212121"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/d_ageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textColor="#212121"
            android:text="@string/age" />
        <TextView
            android:id="@+id/d_genderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textColor="#212121"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/d_birthDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textColor="#212121"
            android:text="@string/birthDate" />
        <TextView
            android:id="@+id/d_phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textColor="#212121"
            android:text="@string/phone" />
        <TextView
            android:id="@+id/d_rxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textColor="#212121"
            android:text="@string/rx" />

    </LinearLayout>

    <TextView
        android:id="@+id/inventoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pharmacistguied3"
        android:layout_below="@id/p_detailsLinerLayout"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000"/>

    <LinearLayout
        android:id="@+id/inventoryLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffff"
        android:layout_below="@id/inventoryTextView">

        <TextView
            android:id="@+id/inventoryDetailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="#212121"/>
    </LinearLayout>
    <TextView
        android:id="@+id/alternativesDetailsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inventoryLinerLayout"
        android:text="@string/pharmacisttguied5"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000"/>
    <LinearLayout
        android:id="@+id/alternativesLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffff"
        android:layout_marginTop="10dp"
        android:layout_below="@id/alternativesDetailsTextView">

        <io.apptik.widget.multiselectspinner.MultiSelectSpinner
            android:id="@+id/multiselectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <Button
        android:id="@+id/approveButton"
        android:background="@color/cardview_light_background"
        android:onClick="approveTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alternativesLinerLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/pharmacistguied6" />

</RelativeLayout>
